Fix horizontal overflow on sidebar

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .scroll-on-hover {
+        @apply overflow-hidden whitespace-nowrap transition-all duration-[0.2s] ease-[ease-in] hover:text-clip hover:overflow-x-auto;
+    }
+}
